<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/labelTipCalculator"
        android:text="@string/tips_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:id="@+id/billAmount"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelTipCalculator"/>
    <TextView
        android:id="@+id/labelTipPercent"
        android:text="@string/tip_percent_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billAmount"/>
    <RadioGroup
        android:id="@+id/tipRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelTipPercent">
        <RadioButton
            android:id="@+id/ten"
            android:text="@string/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/fifteen"
            android:text="@string/fifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/eighteen"
            android:text="@string/eighteen"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/twenty"
            android:text="@string/twenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tipAmount"
        android:text="@string/tip_amount_label"
        android:textColor="@color/foreground_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipRadioGroup"/>
    <TextView
        android:id="@+id/totalBill"
        android:text="@string/total_bill_label"
        android:textColor="@color/foreground_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipAmount"/>
</RelativeLayout>

